[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/System/StateCamera.gd" type="Script" id=1]
[ext_resource path="res://src/System/CameraDirectTranslate.gd" type="Script" id=2]
[ext_resource path="res://src/System/CameraFollowPlayer.gd" type="Script" id=3]
[ext_resource path="res://images/icon.png" type="Texture" id=4]
[ext_resource path="res://src/Fonts/font.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/System/CameraZoneTranslate.gd" type="Script" id=6]
[ext_resource path="res://src/System/InstantTransmission.gd" type="Script" id=7]
[ext_resource path="res://src/System/CameraOffset.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="StateCamera" type="Camera2D"]
z_index = 9
current = true
script = ExtResource( 1 )

[node name="area_limit_detector" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 2048

[node name="collisionShape2D" type="CollisionShape2D" parent="area_limit_detector"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="area_limit_detector/collisionShape2D"]
visible = false
scale = Vector2( 0.0343125, 0.038125 )
texture = ExtResource( 4 )

[node name="FollowPlayerX" type="Node" parent="."]
script = ExtResource( 3 )

[node name="FollowPlayerY" type="Node" parent="."]
script = ExtResource( 3 )
x_axis = false

[node name="TranslateX" type="Node" parent="."]
script = ExtResource( 2 )

[node name="TranslateY" type="Node" parent="."]
script = ExtResource( 2 )
x_axis = false

[node name="ZoneTranslateX" type="Node" parent="."]
script = ExtResource( 6 )

[node name="ZoneTranslateY" type="Node" parent="."]
script = ExtResource( 6 )
x_axis = false

[node name="DoorTranslateX" type="Node" parent="."]
script = ExtResource( 6 )
translate_time = 1.9

[node name="DoorTranslateY" type="Node" parent="."]
script = ExtResource( 6 )
x_axis = false
translate_time = 1.9

[node name="debugtext" type="RichTextLabel" parent="."]
visible = false
margin_left = -16.0
margin_top = -65.0
margin_right = 249.0
margin_bottom = -16.0
custom_fonts/normal_font = ExtResource( 5 )
text = "asdf"

[node name="debugtext3" type="RichTextLabel" parent="."]
visible = false
margin_left = -16.0
margin_top = -65.0
margin_right = 249.0
margin_bottom = -16.0
custom_fonts/normal_font = ExtResource( 5 )
text = "asdf"

[node name="debugtext2" type="RichTextLabel" parent="."]
visible = false
margin_left = -134.0
margin_top = -46.0
margin_right = 131.0
margin_bottom = 3.0
custom_fonts/normal_font = ExtResource( 5 )
text = "asdf"

[node name="InstantTransmission" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Offset" type="Node" parent="."]
script = ExtResource( 8 )

[connection signal="start_doortranslate_x" from="." to="DoorTranslateX" method="activate"]
[connection signal="start_doortranslate_y" from="." to="DoorTranslateY" method="activate"]
[connection signal="start_follow_x" from="." to="FollowPlayerX" method="activate"]
[connection signal="start_follow_y" from="." to="FollowPlayerY" method="activate"]
[connection signal="start_translate_x" from="." to="TranslateX" method="activate"]
[connection signal="start_translate_y" from="." to="TranslateY" method="activate"]
[connection signal="start_zonetranslate_x" from="." to="ZoneTranslateX" method="activate"]
[connection signal="start_zonetranslate_y" from="." to="ZoneTranslateY" method="activate"]
[connection signal="area_entered" from="area_limit_detector" to="." method="on_area_enter"]
[connection signal="area_exited" from="area_limit_detector" to="." method="on_area_exit"]
